# machine-learning-sandbox

./: .gitignore  .gitmodules  LICENSE  README.md
llm/rag/ell-rag/: .pre-commit-config.yaml  README.md  pyproject.toml
llm/rag/ell-rag/logdir/: ell.db
llm/rag/ell-rag/src/beginner/: rag.py
llm/rag/ell-rag/src/beginner/examples/: ell_completion.py  rag_example_simple.py
llm/rag/n8n-supabase-rag/: implementation_notes.md  n8n_supabase_rag_text_or_pdf.json
llm/rag/notes/: rag_fundamentals.md  working_with_projects.md
llm/science/semantic_scholar/: examples.py
